<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kanj.flexboxtags.MainActivity">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flex_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexWrap="wrap"
        app:alignItems="flex_start"
        app:alignContent="flex_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"/>

    <Switch
        android:id="@+id/switch_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/txt_switch_1"
        app:layout_constraintTop_toBottomOf="@+id/flex_box"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Switch
        android:id="@+id/switch_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/txt_switch_2"
        app:layout_constraintTop_toBottomOf="@+id/switch_1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Switch
        android:id="@+id/switch_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/txt_switch_3"
        app:layout_constraintTop_toBottomOf="@+id/switch_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Switch
        android:id="@+id/switch_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/txt_switch_4"
        app:layout_constraintTop_toBottomOf="@+id/switch_3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Switch
        android:id="@+id/switch_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/txt_switch_5"
        app:layout_constraintTop_toBottomOf="@+id/switch_4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Switch
        android:id="@+id/switch_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/txt_switch_6"
        app:layout_constraintTop_toBottomOf="@+id/switch_5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
